--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,27 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from CryptoSystems.CryptoWrapper import CryptoWrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ФХЦЧШ'"
+       "'БВГДЕ'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from CryptoSystems.CryptoWrapper import CryptoWrapper\n",
+    "crypto = CryptoWrapper(method = 'Affine',\n",
+    "                alphabet_path = './Data/alphabet.txt', \n",
+    "                input_path = './Data/in.txt', \n",
+    "                key_path = './Data/key_Affine.txt', \n",
+    "                do_encrypt = 'enc')\n",
     "\n",
-    "crypto = CryptoWrapper(method = 'Caesar',\n",
+    "crypto.encrypt()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'АБВГД'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crypto = CryptoWrapper(method = 'Affine',\n",
     "                       alphabet_path = './Data/alphabet.txt', \n",
-    "                       input_path = './Data/in.txt', \n",
-    "                       key_path = './Data/key_Cipher.txt', \n",
+    "                       input_path = './Data/crypt.txt', \n",
+    "                       key_path = './Data/key_Affine.txt', \n",
     "                       do_encrypt = 'dec')\n",
     "\n",
     "crypto.encrypt()"
