--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'У', 'Й', 'З', 'Д', 'П', 'О', 'А', 'Х', 'Т', 'Ь', 'Щ', 'С', 'Б', 'Ю', 'Ы', 'Э', 'Ц', 'Ё', 'Я', 'Ч', 'Ф', 'М', 'В', 'И', 'Л', 'Ш', 'Е', 'Г', 'К', 'Р', 'Ъ', 'Ж', 'Н'}\n",
+      "{'У', 'Й', 'З', 'Д', 'П', 'О', 'А', 'Х', 'Т', 'Ь', 'Щ', 'С', 'Б', 'Ю', 'Ы', 'Э', 'Ё', 'Ц', 'Я', 'Ч', 'Ф', 'М', 'В', 'И', 'Л', 'Ш', 'Е', 'Г', 'К', 'Р', 'Ъ', 'Ж', 'Н'}\n",
+      "{'А': 'З', 'Б': 'С', 'В': 'Т', 'Г': 'У', 'Д': 'Ф', 'Е': 'Х', 'Ё': 'Ц', 'Ж': 'П', 'З': 'М', 'И': 'Н', 'Й': 'О', 'К': 'Ъ', 'Л': 'Ю', 'М': 'Я', 'Н': 'А', 'О': 'Б', 'П': 'Е', 'Р': 'Р', 'С': 'Ч', 'Т': 'Ш', 'У': 'Щ', 'Ф': 'Ё', 'Х': 'Ж', 'Ц': 'Ы', 'Ч': 'И', 'Ш': 'Й', 'Щ': 'В', 'Ъ': 'Г', 'Ы': 'Д', 'Ь': 'К', 'Э': 'Л', 'Ю': 'Ь', 'Я': 'Э'}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'БВГДЕ'"
+       "'ЗСТУФ'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Affine',\n",
+    "crypto = CryptoWrapper(method = 'Replace',\n",
     "                alphabet_path = './Data/alphabet.txt', \n",
     "                input_path = './Data/in.txt', \n",
-    "                key_path = './Data/key_Affine.txt', \n",
+    "                key_path = './Data/key_Replace.txt', \n",
     "                do_encrypt = 'enc')\n",
     "\n",
     "crypto.encrypt()\n"
@@ -37,25 +46,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'У', 'Й', 'З', 'Д', 'П', 'О', 'А', 'Х', 'Т', 'Ь', 'Щ', 'С', 'Б', 'Ю', 'Ы', 'Э', 'Ц', 'Ё', 'Я', 'Ч', 'Ф', 'М', 'В', 'И', 'Л', 'Ш', 'Е', 'Г', 'К', 'Р', 'Ъ', 'Ж', 'Н'}\n",
+      "{'У', 'Й', 'З', 'Д', 'П', 'О', 'А', 'Х', 'Т', 'Ь', 'Щ', 'С', 'Б', 'Ю', 'Ы', 'Э', 'Ё', 'Ц', 'Я', 'Ч', 'Ф', 'М', 'В', 'И', 'Л', 'Ш', 'Е', 'Г', 'К', 'Р', 'Ъ', 'Ж', 'Н'}\n",
+      "{'А': 'З', 'Б': 'С', 'В': 'Т', 'Г': 'У', 'Д': 'Ф', 'Е': 'Х', 'Ё': 'Ц', 'Ж': 'П', 'З': 'М', 'И': 'Н', 'Й': 'О', 'К': 'Ъ', 'Л': 'Ю', 'М': 'Я', 'Н': 'А', 'О': 'Б', 'П': 'Е', 'Р': 'Р', 'С': 'Ч', 'Т': 'Ш', 'У': 'Щ', 'Ф': 'Ё', 'Х': 'Ж', 'Ц': 'Ы', 'Ч': 'И', 'Ш': 'Й', 'Щ': 'В', 'Ъ': 'Г', 'Ы': 'Д', 'Ь': 'К', 'Э': 'Л', 'Ю': 'Ь', 'Я': 'Э'}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'АБВГД'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Affine',\n",
+    "crypto = CryptoWrapper(method = 'Replace',\n",
     "                       alphabet_path = './Data/alphabet.txt', \n",
     "                       input_path = './Data/crypt.txt', \n",
-    "                       key_path = './Data/key_Affine.txt', \n",
+    "                       key_path = './Data/key_Replace.txt', \n",
     "                       do_encrypt = 'dec')\n",
     "\n",
     "crypto.encrypt()"
