--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  3]\n",
+      " [ 3 20]]\n",
+      "[[ 1.81818182 -0.27272727]\n",
+      " [-0.27272727  0.09090909]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'ЬЭТПТЗШЭОГЧДЭЦПБФЦПЧШБЮГЪЭУМЯЗССЪЭКЧЯЭЪЯХЭАМПЮ'"
+       "'ЬЗЖФТ РЁРТДШЯМРАЗИЦЁГЩЭЧЙТЙЩЪЦУМЙТТЫЛШЧ ЖЙСПЗЗ'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Replace',\n",
+    "crypto = CryptoWrapper(method = 'Hill',\n",
     "                alphabet_path = './Data/alphabet.txt', \n",
     "                input_path = './Data/in.txt', \n",
-    "                key_path = './Data/key_Replace.txt', \n",
+    "                key_path = './Data/key_Hill.txt', \n",
     "                do_encrypt = 'enc')\n",
     "\n",
     "crypto.encrypt()\n"
@@ -37,29 +47,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Я ЖАЖДУ БЫТЬ КАРИКАТУРНЫМ ЗЛОДЕЕМ ЭТО МОЙ ПЛАН'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  3]\n",
+      " [ 3 20]]\n",
+      "[[ 1.81818182 -0.27272727]\n",
+      " [-0.27272727  0.09090909]]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      1\u001b[0m crypto \u001b[38;5;241m=\u001b[39m CryptoWrapper(method \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHill\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      2\u001b[0m                        alphabet_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Data/alphabet.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      3\u001b[0m                        input_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Data/crypt.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      4\u001b[0m                        key_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Data/key_Hill.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, \n\u001b[1;32m      5\u001b[0m                        do_encrypt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdec\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m \u001b[43mcrypto\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencrypt\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/main/cryptography/Lab1/src/CryptoSystems/CryptoWrapper.py:49\u001b[0m, in \u001b[0;36mCryptoWrapper.encrypt\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mencrypt\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m---> 49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcrypton\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencrypt\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/main/cryptography/Lab1/src/CryptoSystems/HillChipher.py:50\u001b[0m, in \u001b[0;36mHillCipher.encrypt\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     47\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minput_str), MATRIX_SHAPE):\n\u001b[0;32m---> 50\u001b[0m     res \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencrypt_function\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minput_str\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m:\u001b[49m\u001b[43mi\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mMATRIX_SHAPE\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m# end for\u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_write_output(res)\n",
+      "File \u001b[0;32m~/main/cryptography/Lab1/src/CryptoSystems/HillChipher.py:71\u001b[0m, in \u001b[0;36mHillCipher._decrypt_single_character\u001b[0;34m(self, symbol)\u001b[0m\n\u001b[1;32m     67\u001b[0m symbol \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39malphabet\u001b[38;5;241m.\u001b[39mindex(symbol[\u001b[38;5;241m0\u001b[39m]), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39malphabet\u001b[38;5;241m.\u001b[39mindex(symbol[\u001b[38;5;241m1\u001b[39m])])\n\u001b[1;32m     69\u001b[0m symbol \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(symbol, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkey_matrix_inv) \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mM\n\u001b[0;32m---> 71\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malphabet\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msymbol\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/main/cryptography/Lab1/src/CryptoSystems/HillChipher.py:71\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     67\u001b[0m symbol \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39malphabet\u001b[38;5;241m.\u001b[39mindex(symbol[\u001b[38;5;241m0\u001b[39m]), \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39malphabet\u001b[38;5;241m.\u001b[39mindex(symbol[\u001b[38;5;241m1\u001b[39m])])\n\u001b[1;32m     69\u001b[0m symbol \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdot(symbol, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkey_matrix_inv) \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mM\n\u001b[0;32m---> 71\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43malphabet\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m symbol)\n",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+     ]
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Replace',\n",
+    "crypto = CryptoWrapper(method = 'Hill',\n",
     "                       alphabet_path = './Data/alphabet.txt', \n",
     "                       input_path = './Data/crypt.txt', \n",
-    "                       key_path = './Data/key_Replace.txt', \n",
+    "                       key_path = './Data/key_Hill.txt', \n",
     "                       do_encrypt = 'dec')\n",
     "\n",
     "crypto.encrypt()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
