--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ЬЗЖФТ РЁРТДШЯМРАЗИЦЁГЩЭЧЙТЙЩЪЦУМЙТТЫЛШЧ ЖЙСПЗЗ'"
+       "'СЙЧАПСЁЙСЫЫИТХРРСШУЭГРЦЗ ЙШЛЧСШПЭ Е БЙЭОТМВЦРН'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Hill',\n",
+    "crypto = CryptoWrapper(method = 'Permutation',\n",
     "                alphabet_path = './Data/alphabet.txt', \n",
     "                input_path = './Data/in.txt', \n",
-    "                key_path = './Data/key_Hill.txt', \n",
+    "                key_path = './Data/key_Permutation.txt', \n",
     "                do_encrypt = 'enc')\n",
     "\n",
     "crypto.encrypt()\n"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,16 +46,16 @@
        "'Я ЖАЖДУ БЫТЬ КАРИКАТУРНЫМ ЗЛОДЕЕМ ЭТО МОЙ ПЛАН'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Hill',\n",
+    "crypto = CryptoWrapper(method = 'Permutation',\n",
     "                       alphabet_path = './Data/alphabet.txt', \n",
     "                       input_path = './Data/crypt.txt', \n",
-    "                       key_path = './Data/key_Hill.txt', \n",
+    "                       key_path = './Data/key_Permutation.txt', \n",
     "                       do_encrypt = 'dec')\n",
     "\n",
     "crypto.encrypt()"
