--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'СЙЧАПСЁЙСЫЫИТХРРСШУЭГРЦЗ ЙШЛЧСШПЭ Е БЙЭОТМВЦРН'"
+       "'Л ЩОФДЕНОЫДЙМКТЯЦКТААР ИЪ ЪЪЬДЧУЪ ОАЬ ЯЭЧ БЪНН'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "'Я ЖАЖДУ БЫТЬ КАРИКАТУРНЫМ ЗЛОДЕЕМ ЭТО МОЙ ПЛАН'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,10 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 5 tests in 0.012s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 -m unittest Test/tests.py"
+   ]
   }
  ],
  "metadata": {
