--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Л ЩОФДЕНОЫДЙМКТЯЦКТААР ИЪ ЪЪЬДЧУЪ ОАЬ ЯЭЧ БЪНН'"
+       "'ЭЯШЫТЧКТАЛЭЮНТЬПЖО ДХЯЦПЛРУЪРГЬЕЭНАЧШЯЛАДЯЬЯДЮЮРУЕСПЬБАГСОЛРНПЗЬКТЪЩМЙЫЦМШБГЛЙЛСЧСЮПЫАТБОЧЮСГИЁ ПГГ ИНЯЫСМОЪЗЭЬЯБЪМИЬКМЮФС'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Permutation',\n",
+    "crypto = CryptoWrapper(method = 'Vigenere',\n",
     "                alphabet_path = './Data/alphabet.txt', \n",
     "                input_path = './Data/in.txt', \n",
-    "                key_path = './Data/key_Permutation.txt', \n",
+    "                key_path = './Data/key_Vigenere.txt', \n",
     "                do_encrypt = 'enc')\n",
     "\n",
     "crypto.encrypt()\n"
@@ -37,25 +37,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Я ЖАЖДУ БЫТЬ КАРИКАТУРНЫМ ЗЛОДЕЕМ ЭТО МОЙ ПЛАН'"
+       "'Я СЫЛУШУ СКВОЗЬ ЯД ТВОИХ СЛОВ ЧАРОДЕЙ  ТЫ МУДР СМЕКЛИВ И УМЁН  СКАЖИ ПОЧЕМУ ЖЕ ТЫ ПРОТИВ ЛЮДЕЙ  И РАЗУМ ТВОЙ ТЬМОЙ ОПЛЕТЁН'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Permutation',\n",
+    "crypto = CryptoWrapper(method = 'Vigenere',\n",
     "                       alphabet_path = './Data/alphabet.txt', \n",
     "                       input_path = './Data/crypt.txt', \n",
-    "                       key_path = './Data/key_Permutation.txt', \n",
+    "                       key_path = './Data/key_Vigenere.txt', \n",
     "                       do_encrypt = 'dec')\n",
     "\n",
     "crypto.encrypt()"
@@ -63,16 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".....\n",
+      "......\n",
       "----------------------------------------------------------------------\n",
-      "Ran 5 tests in 0.012s\n",
+      "Ran 6 tests in 0.008s\n",
       "\n",
       "OK\n"
      ]
