--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ЭЯШЫТЧКТАЛЭЮНТЬПЖО ДХЯЦПЛРУЪРГЬЕЭНАЧШЯЛАДЯЬЯДЮЮРУЕСПЬБАГСОЛРНПЗЬКТЪЩМЙЫЦМШБГЛЙЛСЧСЮПЫАТБОЧЮСГИЁ ПГГ ИНЯЫСМОЪЗЭЬЯБЪМИЬКМЮФС'"
+       "' ЯЫСУЛУШС ВКЗО ЬДЯТ ОВХИС ОЛ ВАЧОРЕД ЙТ  ЫУМРДС ЕМЛКВИИ У ЁМ НС АКИЖП ЧОМЕ УЕЖТ  ЫРПТОВИЛ ДЮЙЕ   ИАРУЗ МВТЙОТ МЬЙОО ЛПТЕНЁ'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Vigenere',\n",
+    "crypto = CryptoWrapper(method = 'Permutation',\n",
     "                alphabet_path = './Data/alphabet.txt', \n",
     "                input_path = './Data/in.txt', \n",
-    "                key_path = './Data/key_Vigenere.txt', \n",
+    "                key_path = './Data/key_Permutation.txt', \n",
     "                do_encrypt = 'enc')\n",
     "\n",
     "crypto.encrypt()\n"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -46,16 +46,16 @@
        "'Я СЫЛУШУ СКВОЗЬ ЯД ТВОИХ СЛОВ ЧАРОДЕЙ  ТЫ МУДР СМЕКЛИВ И УМЁН  СКАЖИ ПОЧЕМУ ЖЕ ТЫ ПРОТИВ ЛЮДЕЙ  И РАЗУМ ТВОЙ ТЬМОЙ ОПЛЕТЁН'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "crypto = CryptoWrapper(method = 'Vigenere',\n",
+    "crypto = CryptoWrapper(method = 'Permutation',\n",
     "                       alphabet_path = './Data/alphabet.txt', \n",
     "                       input_path = './Data/crypt.txt', \n",
-    "                       key_path = './Data/key_Vigenere.txt', \n",
+    "                       key_path = './Data/key_Permutation.txt', \n",
     "                       do_encrypt = 'dec')\n",
     "\n",
     "crypto.encrypt()"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
      "text": [
       "......\n",
       "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.013s\n",
+      "Ran 6 tests in 0.008s\n",
       "\n",
       "OK\n"
      ]
