--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' ЯЫСУЛУШС ВКЗО ЬДЯТ ОВХИС ОЛ ВАЧОРЕД ЙТ  ЫУМРДС ЕМЛКВИИ У ЁМ НС АКИЖП ЧОМЕ УЕЖТ  ЫРПТОВИЛ ДЮЙЕ   ИАРУЗ МВТЙОТ МЬЙОО ЛПТЕНЁ'"
+       "'ЕНИСЕТМ ЕНТ ЛЕ О ИЕСДРЕЦЯ С ЕЪ М   СЛУБЫОК ЙОКДЛНУП ИРАКАЗ Л  ХСАВИТИЛД ЕВТ НЕ ИХОТОИНАКТ УР П  НВСЕИЛЕ ОГВ М АРОМНРЙЫЗ ЛА  '"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,21 +32,21 @@
     "                key_path = './Data/key_Permutation.txt', \n",
     "                do_encrypt = 'enc')\n",
     "\n",
-    "crypto.encrypt()\n"
+    "crypto.encrypt()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Я СЫЛУШУ СКВОЗЬ ЯД ТВОИХ СЛОВ ЧАРОДЕЙ  ТЫ МУДР СМЕКЛИВ И УМЁН  СКАЖИ ПОЧЕМУ ЖЕ ТЫ ПРОТИВ ЛЮДЕЙ  И РАЗУМ ТВОЙ ТЬМОЙ ОПЛЕТЁН'"
+       "'НЕСИТЕ МНЕ ТЕЛО И СЕРДЦЕ Я СЪЕМ   С УЛЫБКОЙ КОЛДУН ПРИКАЗАЛ   СХВАТИЛИ ДВЕ ТЕНИ ОХОТНИКА ТРУП   ВНЕСЛИ ЕГО В МРАМОРНЫЙ ЗАЛ  '"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,11 +70,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "......\n",
+      "...F..\n",
+      "======================================================================\n",
+      "FAIL: test_Permutation (Test.tests.CryptoTest)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.008s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/masikol/main/cryptography/Lab1/src/Test/tests.py\", line 94, in test_Permutation\n",
+      "    self.assertEqual(decript_data, encript_data)\n",
+      "AssertionError: 'НЕСИ[58 chars]СХВАТИЛИ ДВЕ ТЕНИ ОХОТНИКА ТРУП   ВНЕСЛИ ЕГО В МРАМОРНЫЙ ЗАЛ' != 'НЕСИ[58 chars]СХВАТИЛИ ДВЕ ТЕНИ ОХОТНИКА ТРУП   ВНЕСЛИ ЕГО В МРАМОРНЫЙ ЗАЛ  '\n",
+      "- НЕСИТЕ МНЕ ТЕЛО И СЕРДЦЕ Я СЪЕМ   С УЛЫБКОЙ КОЛДУН ПРИКАЗАЛ   СХВАТИЛИ ДВЕ ТЕНИ ОХОТНИКА ТРУП   ВНЕСЛИ ЕГО В МРАМОРНЫЙ ЗАЛ\n",
+      "+ НЕСИТЕ МНЕ ТЕЛО И СЕРДЦЕ Я СЪЕМ   С УЛЫБКОЙ КОЛДУН ПРИКАЗАЛ   СХВАТИЛИ ДВЕ ТЕНИ ОХОТНИКА ТРУП   ВНЕСЛИ ЕГО В МРАМОРНЫЙ ЗАЛ  \n",
+      "?                                                                                                                           ++\n",
       "\n",
-      "OK\n"
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 6 tests in 0.079s\n",
+      "\n",
+      "FAILED (failures=1)\n"
      ]
     }
    ],
