--- a/Lab1/src/demo.ipynb
+++ b/Lab1/src/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -20,16 +20,16 @@
        "'БНПОСЕ УГТЦОЕО В ТСНПАА ИОЕР ЖАТСЛПТДИОАИ ОС  ХД ИЕСОЗЛП ГТЛ ОЕАВИЕС  ЛДГПЯОНОН ГА АКУД ИИКТЛП ОООНЛЙКЬЫЕ ТПДЛЕ ЯЫЗТБМ АЫЫВЕЙТ ОАСА ВК  УДВГЁР СО Т  ТЧОЕИ МБЩ ОТРТАЯЕЕСР ВИКП СТР ИТЫИ ЕЕОСОЛНГО ОДОРНГО ГРГДООСОЯЕ  Б В ЛСН ЕЕАСБЯЛК ОАЬЛЯБШ ЮЬОВ ЕВ СНЛАС ЕКЯЛБАЬ ОШЯБЛЬО ЮВ ЕВНЛКСЕС АЛБШЯОЬ АБЛВЯЮО ЬМ Я  ОЕ ОЗНБДН АПКЛЯОИ КПВСА УТТ Е О  ЕС ГРНАПООЮЖ ВАТКД И ИЙИХЛАООИРДЫЧПЙХН О ОЕ ЕДВЧИРГЕСН УЕТИ ИЫЛКЕ СЗАБОТВННОЙОЧЫА ДР НО СБЕСТЕМРЕН  ИЫИЖЕВ  ДЫВОЙНС АООКНЛЙНЦЕО ИЕА ВП  УДВГЁР СО Т  ТЧОЕИ МДЩ  ЕА КАЛОЗО ЗРНГИОМТН  О АЕСЕРЬМТЛЙНС РОИТИЕЛТНБЕЬ ОРДГЙООВЕ СА ЁНЕ РВ СЕ В ЛСН ЕЕАСБЯЛК ОАЬЛЯБШ ЮЬОВ ЕВ СНЛАС ЕКЯЛБАЬ ОШЯБЛЬО ЮВ ЕВНЛКСЕС АЛБШЯОЬ АБЛВЯЮО ЬМ Я  ОЕ ЕКНСРТ АЛКТЯАИ КПВСА УТТ Е О  ШЗЬИЛАТ ЯЕЮНРДУ УА  ПНИВДРДЬВЕ АЬИ СЕТЯЛНДМЦ ЕО ГШЬАТАТ ЕЯ ЛПЖОУМРИОИЯ ЛА ТТСКИЬКЯЕОО ЛС МГЗЯ АЛВДЬАВЫТ У ЕЖОЧИ АКЫ АНПТ ТАСТЬЧСВЛ ЫОИЕД МА ВА  УДВГЁР СО Т  ТЧОЕИ МРЩ ПОЯД ТМГЕЗОСД  ЕЬЕССЁ МТЯА ИПЕНРМ РУВР НТЗИКЕЛ РАОЬВНГНООНООЕФДГ АОКР НИА  ЕВЕ СЛКН АОСЯБШЛ АЮЬЯЛВБ ЬСО ВЕЕКНЯЛСАО ШЛЯБЬАЮ ВБ ЛОЬС ЕЕСВЛНЯКО ЬАБЛЯШЮ ОАЛБ В  ОЬ МВЯШОБ ЛЕЯНГ УАИРАШ  УКВПОС ТМТЕ  ОЛГДЯООЯНО ИАКПАЛ  УКВПОС ТМТЕ  ОКСЕЯЕРАТКЯЛН АКИВАПТ  ТУЕО СТ'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "crypto = CryptoWrapper(method = 'Permutation',\n",
-    "                alphabet_path = './Data/alphabet.txt', \n",
-    "                input_path = './Data/in.txt', \n",
-    "                key_path = './Data/key_Permutation.txt', \n",
+    "                alphabet_path = './Data/alphabet', \n",
+    "                input_path = './Data/in', \n",
+    "                key_path = './Data/key_Permutation', \n",
     "                do_encrypt = 'enc')\n",
     "\n",
     "crypto.encrypt()"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -46,16 +46,16 @@
        "'НЕБО ПУСТОГО ЦВЕТА НАС ПОЖИРАЕТ ЛИСТОПАД  ИСХОД ИЗ СЛЕПОГО ЛЕТА И ВСЛЕД ПОГОНЯ НАУГАД  КИПИТ КОЛОКОЛЬНЫЙ ЛЕПЕТ ДЫМЯТ ЗАБЫТЫЕ ВОЙСКА  А ВДРУГ ВСЁ ТО ЧТО ИЩЕМ  ОБРЕТАЕТСЯ ПРИ ВСКРЫТИИ  ТЕЛЕСНОГО РОДНОГО ДОРОГОГО СЕБЯ    ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ  ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ  ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ    МОЯ БЕЗДОННАЯ КОПИЛКА В ПУСТОТЕ    СНЕГА ПРОВОЖАЮТ ДИКИЙ И ЛИХОРАДОЧНЫЙ ПОХОД  ВЕЧЕРНИЕ ГУСТЫЕ ЛИКИ БЕЗОСТАНОВОЧНЫЙ НАРОД  БЕССМЕРТНЫЕ И ЖИВЫЕ В ОДНОЙ ОСКАЛЕННОЙ ЦЕПИ  А ВДРУГ ВСЁ ТО ЧТО ИЩЕМ   ДАЛЕКО ЗА ГОРИЗОНТОМ  НА СМЕРТЕЛЬНОЙ ИСТРЕБИТЕЛЬНОЙ ДОРОГЕ ВСЁ НА СЕВЕР    ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ  ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ  ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ    МОЯ СЕКРЕТНАЯ КАЛИТКА В ПУСТОТЕ    ЗАШИТЬ ЛЕДЯНУЮ РАНУ И ВПРЕДЬ ДАВИТЬСЯ ЛЕДЕНЦОМ  ШАГАТЬ ТЯЖЕЛО УПРЯМО ИЛИ КАТИТЬСЯ КОЛЕСОМ  ЗАГЛЯДЫВАТЬ В ЧУЖИЕ ОКНА ПЫТАТЬ СЧАСТЛИВЫЕ ДОМА   А ВДРУГ ВСЁ ТО ЧТО ИЩЕМ  ПРЯМО ГДЕТО ЗДЕСЬ СМЕЁТСЯ  НАПРИМЕР  ВНУТРИ ЗЕРКАЛЬНОНОВОГОДНЕГО ФОНАРИКА    ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ  ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ  ВСЕЛЕНСКАЯ БОЛЬШАЯ ЛЮБОВЬ    МОЯ ВОЛШЕБНАЯ ИГРУШКА В ПУСТОТЕ  МОЯ ГОЛОДНАЯ КОПИЛКА В ПУСТОТЕ  МОЯ СЕКРЕТНАЯ КАЛИТКА В ПУСТОТЕ'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "crypto = CryptoWrapper(method = 'Permutation',\n",
-    "                       alphabet_path = './Data/alphabet.txt', \n",
-    "                       input_path = './Data/crypt.txt', \n",
-    "                       key_path = './Data/key_Permutation.txt', \n",
+    "                       alphabet_path = './Data/alphabet', \n",
+    "                       input_path = './Data/crypt', \n",
+    "                       key_path = './Data/key_Permutation', \n",
     "                       do_encrypt = 'dec')\n",
     "\n",
     "crypto.encrypt()"
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
      "text": [
       "......\n",
       "----------------------------------------------------------------------\n",
-      "Ran 6 tests in 0.046s\n",
+      "Ran 6 tests in 0.086s\n",
       "\n",
       "OK\n"
      ]
