--- a/Lab1/src/demo_frequency_analysis.ipynb
+++ b/Lab1/src/demo_frequency_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "2120796"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,24 +159,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "metric=0.4900900900900901 for text=./Data/in, for json=./Data/custom_freq.json, len=1110\n",
-      "metric=0.47927927927927927 for text=./Data/in, for json=./Data/tolkin_freq.json, len=1110\n",
+      "accyracy=0.4900900900900901 for text=./Data/in, for json=./Data/custom_freq.json, len=1110\n",
+      "accyracy=0.47927927927927927 for text=./Data/in, for json=./Data/tolkin_freq.json, len=1110\n",
       "\n",
-      "metric=0.48778384593273927 for text=./Data/in_test_1, for json=./Data/custom_freq.json, len=3479\n",
-      "metric=0.5903995400977292 for text=./Data/in_test_1, for json=./Data/tolkin_freq.json, len=3479\n",
+      "accyracy=0.48778384593273927 for text=./Data/in_test_1, for json=./Data/custom_freq.json, len=3479\n",
+      "accyracy=0.5903995400977292 for text=./Data/in_test_1, for json=./Data/tolkin_freq.json, len=3479\n",
       "\n",
-      "metric=0.6259688739700946 for text=./Data/in_test_2, for json=./Data/custom_freq.json, len=32770\n",
-      "metric=0.49496490692706746 for text=./Data/in_test_2, for json=./Data/tolkin_freq.json, len=32770\n",
+      "accyracy=0.6259688739700946 for text=./Data/in_test_2, for json=./Data/custom_freq.json, len=32770\n",
+      "accyracy=0.49496490692706746 for text=./Data/in_test_2, for json=./Data/tolkin_freq.json, len=32770\n",
       "\n",
-      "metric=0.6586060139683402 for text=./Data/fit_text, for json=./Data/custom_freq.json, len=2120796\n",
-      "metric=1.0 for text=./Data/fit_text, for json=./Data/tolkin_freq.json, len=2120796\n",
+      "accyracy=0.6586060139683402 for text=./Data/fit_text, for json=./Data/custom_freq.json, len=2120796\n",
+      "accyracy=1.0 for text=./Data/fit_text, for json=./Data/tolkin_freq.json, len=2120796\n",
       "\n"
      ]
     }
@@ -194,7 +194,7 @@
     "for i in texts_to_test:\n",
     "    for j in freq_jsons:\n",
     "        _ = test_system(i, j)\n",
-    "        print(f'metric={_[0]} for text={i}, for json={j}, len={_[-1]}')\n",
+    "        print(f'accyracy={_[0]} for text={i}, for json={j}, len={_[-1]}')\n",
     "    # end for\n",
     "    print()\n",
     "# end for"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
