--- a/Lab1/src/demo_frequency_analysis.ipynb
+++ b/Lab1/src/demo_frequency_analysis.ipynb
@@ -37,6 +37,7 @@
     "\n",
     "with open('./Data/fit_text', 'w') as f:\n",
     "    f.write(text)\n",
+    "# end with \n",
     "\n",
     "len(text)"
    ]
