cannot do better freq analys

--- a/Lab1/src/demo_frequency_analysis.ipynb
+++ b/Lab1/src/demo_frequency_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "2120796"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,54 +160,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accyracy=0.4900900900900901 for text=./Data/in, for json=./Data/custom_freq.json, len=1110\n",
-      "accyracy=0.47927927927927927 for text=./Data/in, for json=./Data/tolkin_freq.json, len=1110\n",
-      "\n",
-      "accyracy=0.48778384593273927 for text=./Data/in_test_1, for json=./Data/custom_freq.json, len=3479\n",
-      "accyracy=0.5903995400977292 for text=./Data/in_test_1, for json=./Data/tolkin_freq.json, len=3479\n",
-      "\n",
-      "accyracy=0.6259688739700946 for text=./Data/in_test_2, for json=./Data/custom_freq.json, len=32770\n",
-      "accyracy=0.49496490692706746 for text=./Data/in_test_2, for json=./Data/tolkin_freq.json, len=32770\n",
-      "\n",
-      "accyracy=0.6586060139683402 for text=./Data/fit_text, for json=./Data/custom_freq.json, len=2120796\n",
-      "accyracy=1.0 for text=./Data/fit_text, for json=./Data/tolkin_freq.json, len=2120796\n",
-      "\n"
+      "accyracy=0.6259688739700946 for text=./Data/in_test_2, for json=./Data/custom_freq.json, len=32770\n"
      ]
     }
    ],
    "source": [
     "texts_to_test = (\n",
-    "    './Data/in',\n",
-    "    './Data/in_test_1',\n",
     "    './Data/in_test_2',\n",
-    "    './Data/fit_text'\n",
     ")\n",
     "\n",
-    "freq_jsons = ('./Data/custom_freq.json', './Data/tolkin_freq.json')\n",
+    "freq_json = './Data/custom_freq.json'\n",
     "\n",
     "for i in texts_to_test:\n",
-    "    for j in freq_jsons:\n",
-    "        _ = test_system(i, j)\n",
-    "        print(f'accyracy={_[0]} for text={i}, for json={j}, len={_[-1]}')\n",
+    "    _ = test_system(i, freq_json)\n",
+    "    print(f'accyracy={_[0]} for text={i}, for json={freq_json}, len={_[-1]}')\n",
     "    # end for\n",
-    "    print()\n",
     "# end for"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = test_system(texts_to_test[-1], freq_jsons[0], save = True)"
+    "_ = test_system(texts_to_test[-1], freq_json, save = True)"
    ]
   }
  ],
